# obsinthe

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/docs/: README.md
obsinthe/: deps.py
obsinthe/alerts/: grouping.py
obsinthe/openshift/: symptoms.py
obsinthe/prometheus/: __init__.py  client.py  data.py  loader.py
obsinthe/testing/: prometheus.py
obsinthe/testing/prometheus/: __init__.py  alerts.py  builder.py  client.py
obsinthe/utils/: data.py  jupyter.py  relative_risks.py  time.py
obsinthe/vis/: alerts.py  clustering.py
recipes/prometheus/: alerts-clustering-demo.ipynb  relative-risks-demo.ipynb
tests/: conftest.py
tests/alerts/: test_grouping.py
tests/prometheus/: test_client.py  test_data.py  test_loader.py
tests/testing/: test_prometheus.py
tests/utils/: test_relative_risks.py  test_utilsdata.py
