[tool.poetry]
name = "obsinthe"
version = "0.1.0"
description = ""
authors = []
packages = [
  {include = "obsinthe"},
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "*"
pyarrow = "*"
requests = "*"
tqdm = "*"


[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
jupyter = "*"
notebook = "^6.5.4"
pre-commit = "*"
pytest = "*"
python-dotenv = "*"
responses = "*"
# Pinning due to old notebook dependceny, see for example here:
# https://github.com/microsoft/azuredatastudio/issues/24443
traitlets = "=5.9.0"

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
order_by_type = false
case_sensitive = false
lines_after_imports = 2
line_length = 88

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
