[tool.poetry]
name = "obsinthe"
version = "0.0.2"
description = ""
authors = []
packages = [
  {include = "obsinthe"},
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "*"
pyarrow = "*"
requests = "*"
tqdm = "*"

plotly = { version = "*", optional = true }
cufflinks = { version = "*", optional = true }

umap-learn = { version = "*", optional = true }
scikit-learn = { version = "*", optional = true }

responses = { version = "*", optional = true }

[tool.poetry.extras]
vis = ["plotly", "cufflinks"]
ml = ["umap-learn", "scikit-learn"]
test = ["responses"]

all = ["plotly", "cufflinks",
       "umap-learn", "scikit-learn",
       "responses"]

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
jupyter = "*"
notebook = "^6.5.4"
pre-commit = "*"
pytest = "*"
python-dotenv = "*"
responses = "*"
# Pinning due to old notebook dependceny, see for example here:
# https://github.com/microsoft/azuredatastudio/issues/24443
traitlets = "=5.9.0"

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
order_by_type = false
case_sensitive = false
lines_after_imports = 2
line_length = 88

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
